--- a/templates/bor/quote_detail.html
+++ b/templates/bor/quote_detail.html
@@ -1,19 +1,29 @@
-﻿{% extends "base_generic.html" %}
+﻿{% extends "bor/page_with_header.html" %}
 
-{% block static %}
-<link rel="stylesheet" href="/static/css/jumbotron-narrow.css">
+{% block title %}
+<title>Цитата {{ quote }}</title>
 {% endblock %}
 
-{% block content %}
-<div class="container">
-  <ul class="list-group">
-    <li class="list-group-item"><strong>Id:</strong> {{ quote.id }}</li>
-    <li class="list-group-item"><strong>Дата:</strong> {{ quote.date }} </li>
-    <li class="list-group-item"><strong>Текст:</strong> {{ quote.text }} </li>
-  </ul>
+{% block inner_content %}
+  <div class="row">
+    <div class="col-md-2">
+      <p class="text-center">
+        <a href="{% url 'quote-rulez' quote.id %}" class="btn btn-link btn-xs" role="button">+</a>
+        {{ quote.rating }}
+        <a href="{% url 'quote-sux' quote.id %}" class="btn btn-link btn-xs" role="button">-</a>
+      </p>
+    </div>
+    <div class="col-md-1">
+      <p class="text-center">
+        <a href="{% url 'quote-bayan' quote.id %}" class="btn btn-link btn-xs" role="button">[:||||:]</a>
+      </p>
+    </div>
+    <div class="col-md-3"></div>
+    <div class="col-md-4"><p class="muted">{{ quote.date }}</p></div>
+    <div class="col-md-2"><p class="text-right"><a href="{% url 'quote-detail' quote.id %}">{{ quote }}</a></p></div>
+  </div>
 
-  <ul class="pager">
-    <li class="previous"><a href="{% url 'quotes-all' %}">&larr; Назад</a></li>
-  </ul>
-
+  <div class="well well-sm">
+    {{ quote.text }}
+  </div>
 {% endblock %}
