--- a/templates/bor/quote_block.html
+++ b/templates/bor/quote_block.html
@@ -1,10 +1,14 @@
 ﻿{% block quote_block %}
   <div class="row">
-    <div class="col-md-2">
+    <div class="col-md-3">
       <p class="text-center">
-        <a href="{% url 'quote-rulez' quote.id %}" class="btn btn-link btn-xs" role="button">+</a>
+        <a href="{% url 'quote-rulez' quote.id %}" class="btn btn-link btn-xs" role="button">
+          <span class="glyphicon glyphicon-plus"></span>
+        </a>
         {{ quote.rating }}
-        <a href="{% url 'quote-sux' quote.id %}" class="btn btn-link btn-xs" role="button">-</a>
+        <a href="{% url 'quote-sux' quote.id %}" class="btn btn-link btn-xs" role="button">
+          <span class="glyphicon glyphicon-minus"></span>
+        </a>
       </p>
     </div>
     <div class="col-md-1">
@@ -13,7 +17,7 @@
       </p>
     </div>
     <div class="col-md-3"></div>
-    <div class="col-md-4"><p class="muted">{{ quote.date|date:"Y-m-d H:i" }}</p></div>
+    <div class="col-md-3"><p class="muted">{{ quote.date|date:"Y-m-d H:i" }}</p></div>
     <div class="col-md-2"><p class="text-right"><a href="{% url 'quote-detail' quote.id %}">{{ quote }}</a></p></div>
   </div>
 
