--- a/templates/bor/page_with_header.html
+++ b/templates/bor/page_with_header.html
@@ -15,7 +15,7 @@
     <p>
       <strong>Цитаты:</strong>
       <a href="{% url 'bor-index' %}" class="btn btn-link btn-sm" role="button">Новые <span class="badge">{{ count_quotes_new }}</span></a>
-      <a href="#" class="btn btn-link btn-sm" role="button">Случайные</a>
+      <a href="{% url 'quotes-random' %}" class="btn btn-link btn-sm" role="button">Случайные</a>
       <a href="#" class="btn btn-link btn-sm" role="button">По рейтингу</a>
       <a href="#" class="btn btn-link btn-sm" role="button">Бездна <span class="badge">0</span></a>
       <a href="#" class="btn btn-link btn-sm" role="button">Топ бездны</a>
