Рефакторинг: вынес блок с поиском в отдельный класс и выпилил места, где он не нужен

--- a/templates/bor/quotes_all_list.html
+++ b/templates/bor/quotes_all_list.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block inner_content %}
+  {% include "bor/search_block.html" %}
   {% include "bor/pager_block.html" %}
 
     <ul class="list-group">
