--- a/templates/bor/quotes_abyss_list.html
+++ b/templates/bor/quotes_abyss_list.html
@@ -1,10 +1,12 @@
 ﻿{% extends "bor/page_with_header.html" %}
 
 {% block title %}
-<title>Случайные цитаты</title>
+<title>Бездна</title>
 {% endblock %}
 
 {% block inner_content %}
+  {% include "bor/search_block.html" %}
+
   <ul class="list-group">
     {% for quote in quotes %}
         {% include "bor/quote_block.html" %}
@@ -16,7 +18,7 @@
       <div class="col-md-2">
       </div>
       <div class="col-md-8">
-        <a href="{% url 'quotes-random' %}" class="btn btn-default btn-lg center-block" role="button">Хочу еще!</a>
+        <a href="{% url 'quotes-abyss' %}" class="btn btn-default btn-lg center-block" role="button">Хочу еще!</a>
       </div>
       <div class="col-md-2">
       </div>
