Добавил блок поиска

--- a/templates/bor/search_block.html
+++ b/templates/bor/search_block.html
@@ -1,9 +1,11 @@
 ﻿{% block search_block %}
-  <div class="input-group">
-    <span class="input-group-addon" id="sizing-addon2"><span class="glyphicon glyphicon-search"></span></span>
-    <input type="text" class="form-control" placeholder="Текст или номер цитаты" aria-describedby="sizing-addon2">
-    <span class="input-group-btn">
-      <button class="btn btn-default" type="button">Найти</button>
-    </span>
-  </div>
+  <form action="{% url 'quote-search'%}" method="get">
+    <div class="input-group">
+      <span class="input-group-addon" id="sizing-addon2"><span class="glyphicon glyphicon-search"></span></span>
+      <input type="text" class="form-control" name="text" placeholder="Текст или номер цитаты" aria-describedby="sizing-addon2">
+      <span class="input-group-btn">
+        <button class="btn btn-default" type="submit">Найти</button>
+      </span>
+    </div>
+  </form>
 {% endblock %}
